	  to be in seconds.
	  
	- Workaround for server crash when calling stored procedures
	  via a server-side prepared statement (driver now detects 
	  prepare(stored procedure) and substitutes client-side prepared 
	  statement), addresses BUG#22297.
	  
	- Added new _ci collations to CharsetMapping, fixing 
	  Bug#22456 - utf8_unicode_ci not working.
	 
07-26-06 - Version 5.0.3

    - Fixed BUG#20650 - Statement.cancel() causes NullPointerException
      if underlying connection has been closed due to server failure.
    
    - Added configuration option "noAccessToProcedureBodies" which will
      cause the driver to create basic parameter metadata for
      CallableStatements when the user does not have access to procedure
      bodies via "SHOW CREATE PROCEDURE" or selecting from mysql.proc
      instead of throwing an exception. The default value for this option
      is "false".
      
07-11-06 - Version 5.0.2-beta (5.0.1 not released due to packaging error)

    - Fixed BUG#17401 - Can't use XAConnection for local transactions when
      no global transaction is in progress.
      
    - Fixed BUG#18086 - Driver fails on non-ASCII platforms. The driver
      was assuming that the platform character set would be a superset 
      of MySQL's "latin1" when doing the handshake for authentication,
      and when reading error messages. We now use Cp1252 for all strings
      sent to the server during the handshake phase, and a hard-coded mapping
      of the "language" server variable to the character set that 
      is used for error messages.
      
    - Fixed BUG#19169 - ConnectionProperties (and thus some
	  subclasses) are not serializable, even though some J2EE containers
	  expect them to be.
	  
	- Fixed BUG#20242 - MysqlValidConnectionChecker for JBoss doesn't
	  work with MySQLXADataSources.
	  
	- Better caching of character set converters (per-connection)
	  to remove a bottleneck for multibyte character sets.
	  